--- a/shared/package.json
+++ b/shared/package.json
@@ -90,6 +90,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@storybook/addon-knobs": "^3.4.2",
     "applescript": "1.0.0",
     "base64-js": "1.2.3",
     "buffer": "5.1.0",
